trek/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trek
  labels:
    app: trek
spec:
  selector:
    app: trek
  ports:
    - port: 3000
      targetPort: 3000
      name: http
