trek/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: trek
  labels:
    app: trek
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
spec:
  to:
    kind: Service
    name: trek
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
